Updated name and other appearance, no functional change
Updated title, appearance, popup.html, added CSS, updated logo, icon, screenshot

--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auto Skip YouTube Ads</title>
+  <title>Auto Ad Skipper for YouTube (AASFY)</title>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h2>Auto Skip YouTube Ads</h2>
-  <p>Ads on YouTube will be automatically skipped when possible.</p>
+  <h2>Auto Ad Skipper For YouTube (AASFY)</h2>
+  <p>This extension constantly looks for the skip ad button in YouTube and presses the button as soon as it is found</p>
+  <p>It works out of the box, no login, no registration or setup required. This is not an Ad Blocker so it is undetectable by YouTube.</p>
   <button id="activateButton">Activate</button>
   <script src="popup.js"></script>
 </body>
